--- a/ibl5/themes/IBL/style/style.css
+++ b/ibl5/themes/IBL/style/style.css
@@ -3402,19 +3402,19 @@ table.sortable thead th {
   }
   .ibl-team-cell--colored {
     text-align: center !important;
-    padding-left: 0.5rem !important;
-    padding-right: 0.5rem !important;
+    padding-left: 0rem !important;
+    padding-right: 0rem !important;
   }
   .ibl-team-cell--colored .ibl-team-cell__name {
     justify-content: center;
   }
   td.ibl-team-cell--colored, th.ibl-team-cell--colored {
-    width: 44px;
-    min-width: 44px;
-    max-width: 44px;
+    width: 24px;
+    min-width: 24px;
+    max-width: 24px;
   }
   .ibl-data-table.responsive-table td.sticky-col.ibl-team-cell--colored, .ibl-data-table.responsive-table th.sticky-col.ibl-team-cell--colored, .ibl-table.responsive-table td.sticky-col.ibl-team-cell--colored, .ibl-table.responsive-table th.sticky-col.ibl-team-cell--colored {
-    min-width: 44px;
+    min-width: 36px;
   }
 }
 .ibl-player-cell {
